--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "blade-ui-kit/blade-heroicons": "^1.3",
         "browner12/helpers": "^3.4",
         "coderello/laraflash": "^4.1",
         "fruitcake/laravel-cors": "^2.0",
