--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@tailwindcss/typography": "^0.5.2",
         "autoprefixer": "^10.4.2",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
+        "postcss-import": "^14.0.2",
         "tailwindcss": "^3.0.23"
     },
     "dependencies": {
+        "@fancyapps/fancybox": "^3.5.7",
         "@tailwindcss/aspect-ratio": "^0.4.0",
         "@tailwindcss/forms": "^0.4.0",
-        "alpinejs": "^3.9.0"
+        "alpinejs": "^3.9.0",
+        "jquery": "^3.6.0",
+        "plyr": "^3.6.12"
     }
 }
