--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 /node_modules
 /public/hot
+/public/css
+/public/js
+/public/css/*
+/public/js/*
+/public/mix-manifest.json
 /public/storage
 /storage/*.key
 /vendor
