--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-CACHE_DRIVER=database
-SESSION_DRIVER=database
+CACHE_DRIVER=file
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 TUMBLR_API_KEY=
