--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "tailwindcss": "^3.0.23"
     },
     "dependencies": {
-        "@fancyapps/fancybox": "^3.5.7",
+        "@fancyapps/ui": "^4.0.26",
         "@tailwindcss/aspect-ratio": "^0.4.0",
         "@tailwindcss/forms": "^0.4.0",
         "alpinejs": "^3.9.0",
